--- a/resources/css/sass/chat.scss
+++ b/resources/css/sass/chat.scss
@@ -327,7 +327,7 @@ body {
         bottom: 0;
         display: flex;
         flex-wrap: nowrap;
-        background-color: white;
+        // background-color: white;
 
         .custom_form_group {
             margin: auto 0;
